content/css/style.css
body{
    min-width: 300px;
    font-family: 'Fira Sans Condensed';
}
a{
    text-decoration: none;
    color: #000;
}
a:hover{
    text-decoration: none;
    color: #000; 
}
.content{
    max-width: 1148px;
    margin: 0 auto;
}


.social-media-nav-icon{
    height: 30px;
}
.nav-bar-font{
    font-family: 'Fira Sans Condensed';
    color: #ccc;
}

#site-name-navbar{
    margin: 0;
    font-size: 22px;
}
.nav-bar-link-hover:hover{
    color: #fff;
}

/* Displays site name and exit button on mobile menus */
.offcanvas-header{ 
    display:none; 
}

.navbar{
    height: 56px;
}

.test{
    height:3000px;
}

.carousel-image-height{
    height: 500px;
}

.carousel-image-bottom{
    position: absolute;
    bottom: 0;
}

.carousel-image-top{
    position: absolute;
    top: 0;
}

.carousel-button{
    background-color: transparent !important;
    color: #fff !important;
}

.carousel-button:hover{
    background-color: #fff !important;
    color: #000 !important;
}

.font-fs-condensed{
    font-family: 'Fira Sans Condensed';
}

.carousel-indicators li {
    height: 16px;
    width: 16px;
    border-radius: 8px;
    border-top: 0 !important;
    border-bottom: 0 !important;
}

.carousel-caption{
    bottom: 30%;
}

.slight-blur{
    filter: blur(3px) !important;
}

.half-grayscale{
    filter: grayscale(50%) !important;
}

@media (max-width: 992px) {
    .collapse {
        display: none !important;
    }
    .offcanvas-header{ 
        display:block; 
    }
    .navbar-collapse {
        position: fixed;
        top:0; 
        bottom: 0;
        left: 100%;
        width: 100%;
        padding-right: 1rem;
        padding-left: 1rem;
        overflow-y: auto;
        visibility: hidden;
        background-color: black;
        transition: visibility .2s ease-in-out, -webkit-transform .2s ease-in-out;
    }
    .navbar-collapse.show {
        visibility: visible;
        transform: translateX(-100%);
    }
    .navbar-toggler{
        display: block !important;
    }
}

